--- a/about.html
+++ b/about.html
@@ -70,9 +70,10 @@
 			<div class="container">
 				<nav class="fh5co-main-nav">
 					<ul>
-						<li><a href="index.html"><span>Home</span></a></li>
-						<li><a href="services.html"><span>Services</span></a></li>
-						<li class="fh5co-active"><a href="about.html"><span>About</span></a></li>
+						<li class="fh5co-active"><a href="index.html"><span>Home</span></a></li>
+						<li><a href="projects.html"><span>Projects</span></a></li>
+						<li><a href="teaching.html"><span>Teaching</span></a></li>
+						<li><a href="about.html"><span>About Me</span></a></li>
 						<li><a href="contact.html"><span>Contact</span></a></li>
 					</ul>
 				</nav>
