--- a/contact.html
+++ b/contact.html
@@ -7,9 +7,9 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Simple &mdash; Free HTML5 Bootstrap Website Template by FreeHTML5.co</title>
+	<title>Andrew Ross &mdash; Machine Learning</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Free HTML5 Website Template by FreeHTML5.co" />
+	<meta name="description" content="Andrew Ross' Machine Learning Projects" />
 	<meta name="keywords" content="free html5, free template, free bootstrap, free website template, html5, css3, mobile first, responsive" />
 	<meta name="author" content="FreeHTML5.co" />
 
@@ -70,11 +70,11 @@
 			<div class="container">
 				<nav class="fh5co-main-nav">
 					<ul>
-						<li class="fh5co-active"><a href="index.html"><span>Home</span></a></li>
+						<li><a href="index.html"><span>Home</span></a></li>
 						<li><a href="projects.html"><span>Projects</span></a></li>
 						<li><a href="teaching.html"><span>Teaching</span></a></li>
 						<li><a href="about.html"><span>About Me</span></a></li>
-						<li><a href="contact.html"><span>Contact</span></a></li>
+						<li class="fh5co-active"><a href="contact.html"><span>Contact</span></a></li>
 					</ul>
 				</nav>
 			</div>
