--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Simple &mdash; Free HTML5 Bootstrap Website Template by FreeHTML5.co</title>
+	<title>Andrew Ross &mdash; Machine Learning</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Free HTML5 Website Template by FreeHTML5.co" />
+	<meta name="description" content="Andrew Ross' Machine Learning Projects" />
 	<meta name="keywords" content="free html5, free template, free bootstrap, free website template, html5, css3, mobile first, responsive" />
 	<meta name="author" content="FreeHTML5.co" />
 
@@ -86,8 +86,8 @@
 				<div class="row">
 					<div class="col-md-8 col-md-offset-2 col-sm-12 col-sm-offset-0 col-xs-12 col-xs-offset-0 text-center fh5co-table">
 						<div class="fh5co-intro fh5co-table-cell">
-							<h1 class="text-center">Make simple and functional templates</h1>
-							<p>Made with love by the fine folks at <a href="http://freehtml5.co">FreeHTML5.co</a></p>
+							<h1 class="text-center">Andrew Ross</h1>
+							<p>Data Scientist</p>
 						</div>
 					</div>
 				</div>
