--- a/services.html
+++ b/services.html
@@ -70,7 +70,7 @@
 			<div class="container">
 				<nav class="fh5co-main-nav">
 					<ul>
-						<li class="fh5co-active"><a href="index.html"><span>Home</span></a></li>
+						<li><a href="index.html"><span>Home</span></a></li>
 						<li><a href="projects.html"><span>Projects</span></a></li>
 						<li><a href="teaching.html"><span>Teaching</span></a></li>
 						<li><a href="about.html"><span>About Me</span></a></li>
