add images to index.html, add project structure to projects.html, add MAT344 to teaching.html

--- a/projects.html
+++ b/projects.html
@@ -80,19 +80,23 @@
 			</div>
 		</header>
 
+		<!-- TEXT ON IMAGE -->
 		<div class="fh5co-hero" style="background-image: url(images/hero_2.jpg);" data-stellar-background-ratio="0.5">
 			<div class="overlay"></div>
 			<div class="container">
 				<div class="row">
 					<div class="col-md-8 col-md-offset-2 col-sm-12 col-sm-offset-0 col-xs-12 col-xs-offset-0 text-center fh5co-table">
 						<div class="fh5co-intro fh5co-table-cell">
-							<h1 class="text-center">Our services</h1>
-							<p>Made with love by the fine folks at <a href="http://freehtml5.co">FreeHTML5.co</a></p>
+							<h1 class="text-center">Machine Learning Projects</h1>
+							<p>These are some of the interesting ML projects that I've worked on. </br>
+							All of my projects can be found on <a href="https://github.com/andrewrosss">GitHub</a></p>
 						</div>
 					</div>
 				</div>
 			</div>
 		</div>
+
+		<!-- PROJECT DISCRIPTION and LINK -->
 		<div class="fh5co-section">
 			<div class="container">
 				<div class="row">
@@ -113,6 +117,7 @@
 			</div>
 		</div>
 
+		<!-- TEXT ON IMAGE -->
 		<div class="fh5co-parallax" style="background-image: url(images/hero_2.jpg);" data-stellar-background-ratio="0.5">
 			<div class="overlay"></div>
 			<div class="container">
@@ -127,6 +132,7 @@
 			</div>
 		</div>
 
+		<!-- PROJECT DISCRIPTION and LINK -->
 		<div class="fh5co-section">
 			<div class="container">
 				<div class="row">
@@ -147,7 +153,7 @@
 			</div>
 		</div>
 
-
+		<!-- TEXT ON IMAGE -->
 		<div class="fh5co-parallax" style="background-image: url(images/hero_3.jpg);" data-stellar-background-ratio="0.5">
 			<div class="overlay"></div>
 			<div class="container">
@@ -162,6 +168,7 @@
 			</div>
 		</div>
 
+		<!-- PROJECT DISCRIPTION and LINK -->
 		<div class="fh5co-section">
 			<div class="container">
 
