--- a/index.html
+++ b/index.html
@@ -80,14 +80,14 @@
 			</div>
 		</header>
 
-		<div class="fh5co-hero" style="background-image: url(images/hero_1.jpg);" data-stellar-background-ratio="0.5">
+		<div class="fh5co-hero" style="background-image: url(images/night_sky.jpg);" data-stellar-background-ratio="0.5">
 			<div class="overlay"></div>
 			<div class="container">
 				<div class="row">
 					<div class="col-md-8 col-md-offset-2 col-sm-12 col-sm-offset-0 col-xs-12 col-xs-offset-0 text-center fh5co-table">
 						<div class="fh5co-intro fh5co-table-cell">
 							<h1 class="text-center">Andrew Ross</h1>
-							<p>Data Scientist</p>
+							<p>Data Scientist &mdash; Toronto, ON, CA</p>
 						</div>
 					</div>
 				</div>
@@ -96,25 +96,25 @@
 		<div class="fh5co-section">
 			<div class="container">
 				<div class="row">
-					<div class="col-md-5">
-						<h2>Creative Design</h2>
-						<p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar. The Big Oxmox advised her not to do so, because there were thousands of bad Commas, wild Question Marks and devious Semikoli, but the Little Blind Text didn’t listen.</p>
+					<div class="col-md-6">
+						<h2>**ADD** bio/personal statement</h2>
+						<p>**ADD** Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar. The Big Oxmox advised her not to do so, because there were thousands of bad Commas, wild Question Marks and devious Semikoli, but the Little Blind Text didn’t listen.</p>
 					</div>
-					<div class="col-md-7">
-						<img src="images/hero_1.jpg" alt="Free HTML5 by FreeHTML5.co" class="img-responsive">
+					<div class="col-md-6">
+						<img src="images/head_shot_1.jpg" alt="" class="img-responsive">
 					</div>
 				</div>
 			</div>
 		</div>
 
-		<div class="fh5co-parallax" style="background-image: url(images/hero_2.jpg);" data-stellar-background-ratio="0.5">
+		<div class="fh5co-parallax" style="background-image: url(images/graph.jpg);" data-stellar-background-ratio="0.5">
 			<div class="overlay"></div>
 			<div class="container">
 				<div class="row">
 					<div class="col-md-8 col-md-offset-2 col-sm-12 col-sm-offset-0 col-xs-12 col-xs-offset-0 text-center fh5co-table">
 						<div class="fh5co-intro fh5co-table-cell">
-							<h1 class="text-center">Keep it simple</h1>
-							<p>Made with love by the fine folks at <a href="http://freehtml5.co">FreeHTML5.co</a></p>
+							<h1 class="text-center"> </h1>
+							<p>**Nothing here probably** </p>
 						</div>
 					</div>
 				</div>
@@ -128,7 +128,7 @@
 					<div class="col-md-6">
 						<div class="fh5co-feature animate-box" data-animate-effect="fadeInLeft">
 							<div class="fh5co-icon">
-								<i class="icon-strategy"></i>
+								<i class="icon-circle-compass"></i>
 							</div>
 							<div class="fh5co-text">
 								<h3>Strategy</h3>
@@ -139,11 +139,11 @@
 					<div class="col-md-6">
 						<div class="fh5co-feature animate-box" data-animate-effect="fadeInLeft">
 							<div class="fh5co-icon">
-								<i class="icon-telescope"></i>
+								<i class="icon-telescope"></i><i class="icon-graduation-cap"></i><i class="icon-strategy"></i>
 							</div>
 							<div class="fh5co-text">
-								<h3>Explore</h3>
-								<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. </p>
+								<h3>Interests</h3>
+								<p>**ADD** Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. </p>
 							</div>
 						</div>
 					</div>
@@ -151,7 +151,7 @@
 					<div class="col-md-6">
 						<div class="fh5co-feature animate-box" data-animate-effect="fadeInLeft">
 							<div class="fh5co-icon">
-								<i class="icon-circle-compass"></i>
+								<i class="icon-strategy"></i>
 							</div>
 							<div class="fh5co-text">
 								<h3>Direction</h3>
