--- a/teaching.html
+++ b/teaching.html
@@ -86,8 +86,9 @@
 				<div class="row">
 					<div class="col-md-8 col-md-offset-2 col-sm-12 col-sm-offset-0 col-xs-12 col-xs-offset-0 text-center fh5co-table">
 						<div class="fh5co-intro fh5co-table-cell">
-							<h1 class="text-center">Our services</h1>
-							<p>Made with love by the fine folks at <a href="http://freehtml5.co">FreeHTML5.co</a></p>
+							<h1 class="text-center">Course Materials</h1>
+							<p>I'm a teaching assistant at the University of Toronto.</br>
+							Available here are some materials (mostly solutions) for those courses.</p>
 						</div>
 					</div>
 				</div>
@@ -96,18 +97,28 @@
 		<div class="fh5co-section">
 			<div class="container">
 				<div class="row">
-					<div class="col-md-5">
-						<h2>E Commerce</h2>
-						<p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar. </p>
+					<div class="col-md-6">
+						<h2>MAT344 - Introduction to Combinatorics</h2>
+						<p>MAT344 covers basic counting principles, generating functions, permutations with restrictions, as well as  fundamentals of graph theory with algorithms; applications (including network flows). Combinatorial structures including block designs and finite geometries. <a href="assets/MAT344F_17/MAT344F_17_syllabus.pdf">Syllabus</a>.</p>
+						<!-- 
 						<ul class="fh5co-check">
 							<li>Web Design</li>
 							<li>User Experience</li>
 							<li>User Interface</li>
 							<li>Search Engine Optimization</li>
-						</ul>
+						</ul> 
+						-->
 					</div>
-					<div class="col-md-7">
+					<div class="col-md-6">
+						<li>
+							Quiz 1 Solutions (Ver. 
+							<a href="assets/MAT344F_17/quiz1/version_a/MAT344_F17_Quiz1_VerA.pdf">A</a>, 
+							<a href="assets/MAT344F_17/quiz1/version_b/MAT344_F17_Quiz1_VerB.pdf">B</a>, 
+							<a href="assets/MAT344F_17/quiz1/version_c/MAT344_F17_Quiz1_VerC.pdf">C</a>)
+						</li>
+						<!--
 						<img src="images/hero_1.jpg" alt="Free HTML5 by FreeHTML5.co" class="img-responsive">
+						-->
 					</div>
 				</div>
 			</div>
