add content to teaching.html, update contact.html

--- a/contact.html
+++ b/contact.html
@@ -39,7 +39,7 @@
 	<meta name="twitter:card" content="" />
 
 	<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-	<link rel="shortcut icon" href="favicon.ico">
+	<!-- <link rel="shortcut icon" href="favicon.ico"> -->
 
 	<link href='https://fonts.googleapis.com/css?family=Work+Sans:400,300,600,400italic,700' rel='stylesheet' type='text/css'>
 	
@@ -47,7 +47,7 @@
 	<link rel="stylesheet" href="css/animate.css">
 	
 	<!-- Magnific Popup -->
-	<link rel="stylesheet" href="css/magnific-popup.css">
+	<!-- <link rel="stylesheet" href="css/magnific-popup.css"> -->
 	<!-- Bootstrap  -->
 	<link rel="stylesheet" href="css/bootstrap.css">
 	<!-- Icomoon Icon Fonts-->
@@ -86,8 +86,8 @@
 				<div class="row">
 					<div class="col-md-8 col-md-offset-2 col-sm-12 col-sm-offset-0 col-xs-12 col-xs-offset-0 text-center fh5co-table">
 						<div class="fh5co-intro fh5co-table-cell">
-							<h1 class="text-center">Contact us</h1>
-							<p>Made with love by the fine folks at <a href="http://freehtml5.co">FreeHTML5.co</a></p>
+							<h1 class="text-center">Collaborate with Me</h1>
+							<p></p>
 						</div>
 					</div>
 				</div>
@@ -96,16 +96,32 @@
 		<div class="fh5co-section">
 			<div class="container">
 				<div class="row">
-					<div class="col-md-5">
+					<div class="col-md-6">
 						<h2>Contact Info</h2>
-						<p>She packed her seven versalia, put her initial into the belt and made herself on the way. When she reached the first hills of the Italic Mountains.</p>
-
-						<p>198 West 21th Street, Suite 721 <br> New York NY 10016</p>
-						<p><a href="#">info@domain.com</a></p>
-						<p><a href="#">+123 456 7890</a></p>
+						<p>I love meeting new people, learning new things and collaborating with people to make things happen, and get projects done. Let's build something!</p>
 					</div>
 					<div class="col-md-6 col-md-push-1">
-						<form action="#">
+						<h2>Email</h2>
+						<p>
+							<button class="btn" data-clipboard-text="a.ross@mail.utoronto.ca-not-part-of-my-email-" ><img src="assets/clippy.svg" width="13" alt="Copy to clipboard" title="Copy to clipboard"></button>
+							<a href="http://www.google.com/recaptcha/mailhide/d?k=012RqAzKQViO58rpLdpE3ybg==&amp;c=QXdZRlm30gk3JVz9EkSJq2DBZ33Ohe9KDukvvO0G2mY=" onclick="window.open('http://www.google.com/recaptcha/mailhide/d?k\x3d012RqAzKQViO58rpLdpE3ybg\x3d\x3d\x26c\x3dQXdZRlm30gk3JVz9EkSJq2DBZ33Ohe9KDukvvO0G2mY\x3d', '', 'toolbar=0,scrollbars=0,location=0,statusbar=0,menubar=0,resizable=0,width=500,height=300'); return false;" title="Reveal this e-mail address">a.ro...</a>@mail.utoronto.ca
+							<br>
+							<button class="btn" data-clipboard-text="andrew.ross.mail@gmail.com-not-part-of-my-email-"> <img src="assets/clippy.svg" width="13" alt="Copy to clipboard" title="Copy to clipboard"></button>
+							<a href="http://www.google.com/recaptcha/mailhide/d?k=01Tf9xljbEj-WIj9fQrgk4Fw==&amp;c=F1C6daFjkeuKabOMYhCv6V4Cul5gyLwq3CbmTugvg2M=" onclick="window.open('http://www.google.com/recaptcha/mailhide/d?k\x3d01Tf9xljbEj-WIj9fQrgk4Fw\x3d\x3d\x26c\x3dF1C6daFjkeuKabOMYhCv6V4Cul5gyLwq3CbmTugvg2M\x3d', '', 'toolbar=0,scrollbars=0,location=0,statusbar=0,menubar=0,resizable=0,width=500,height=300'); return false;" title="Reveal this e-mail address">andrew.ro...</a>@gmail.com
+							</p>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-md-6">
+						<h2>City</h2>
+						<p>Toronto ON CA</p>
+					</div>
+					<div class="col-md-6 col-md-push-1">
+						<h2>Phone</h2>
+						<p>
+							<button class="btn" data-clipboard-text="+1 416 904 0690"><img src="assets/clippy.svg" width="13" alt="Copy to clipboard"></button>+1 416 904 0690
+						</p>
+						<!-- <form action="#">
 							<div class="form-group">
 								<input type="text" class="form-control" placeholder="Name">
 							</div>
@@ -118,12 +134,12 @@
 							<div class="form-group">
 								<input type="submit" value="Send Message" class="btn btn-primary btn-md">
 							</div>
-						</form>
+						</form> -->
 					</div>
 				</div>
 			</div>
 		</div>
-		<div id="map"></div>
+		<!-- <div id="map"></div> -->
 
 	</div> <!-- END fh5co-wrap -->
 
@@ -131,11 +147,11 @@
 	<footer id="fh5co-footer">
 		<div class="container">
 			<div class="row">
-				<div class="col-md-4">
-					<h3>About Us</h3>
-					<p>She packed her seven versalia, put her initial into the belt and made herself on the way. When she reached the first hills of the Italic Mountains.</p>
+				<div class="col-md-6">
+					<!-- <h3>About Us</h3>
+					<p>She packed her seven versalia, put her initial into the belt and made herself on the way. When she reached the first hills of the Italic Mountains.</p> -->
 				</div>
-				<div class="col-md-3 col-md-push-1">
+				<div class="col-md-2 col-md-push-1">
 					<h3>Quick Links</h3>
 					<ul>
 						<li><a href="#">About Us</a></li>
@@ -145,7 +161,7 @@
 						<li><a href="#">Contact</a></li>
 					</ul>
 				</div>
-				<div class="col-md-3 col-md-push-1">
+				<div class="col-md-2 col-md-push-1">
 					<h3>Follow Us</h3>
 					<ul class="fh5co-social">
 						<li><a href="#"><i class="icon-twitter"></i> <span>Twitter</span></a></li>
@@ -173,12 +189,26 @@
 	<script src="js/jquery.waypoints.min.js"></script>
 	<!-- Stellar -->
 	<script src="js/jquery.stellar.min.js"></script>
+	<!-- Copy to Clipbaord -->
+	<script src="js/clipboard.min.js"></script>
 	<!-- Google Map -->
-	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCefOgb1ZWqYtj7raVSmN4PL2WkTrc-KyA&sensor=false"></script>
-	<script src="js/google_map.js"></script>
+	<!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCefOgb1ZWqYtj7raVSmN4PL2WkTrc-KyA&sensor=false"></script> -->
+	<!-- <script src="js/google_map.js"></script> -->
 
 	<!-- MAIN JS -->
 	<script src="js/main.js"></script>
+
+	
+	<script>
+    var clipboard = new Clipboard('.btn');
+    clipboard.on('success', function(e) {
+        console.log(e);
+    });
+    clipboard.on('error', function(e) {
+        console.log(e);
+    });
+    </script>
+    
 
 	</body>
 </html>
