--- a/teaching.html
+++ b/teaching.html
@@ -39,7 +39,7 @@
 	<meta name="twitter:card" content="" />
 
 	<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-	<link rel="shortcut icon" href="favicon.ico">
+	<!-- <link rel="shortcut icon" href="favicon.ico"> -->
 
 	<link href='https://fonts.googleapis.com/css?family=Work+Sans:400,300,600,400italic,700' rel='stylesheet' type='text/css'>
 	
@@ -47,7 +47,7 @@
 	<link rel="stylesheet" href="css/animate.css">
 	
 	<!-- Magnific Popup -->
-	<link rel="stylesheet" href="css/magnific-popup.css">
+	<!-- <link rel="stylesheet" href="css/magnific-popup.css"> -->
 	<!-- Bootstrap  -->
 	<link rel="stylesheet" href="css/bootstrap.css">
 	<!-- Icomoon Icon Fonts-->
@@ -86,7 +86,7 @@
 				<div class="row">
 					<div class="col-md-8 col-md-offset-2 col-sm-12 col-sm-offset-0 col-xs-12 col-xs-offset-0 text-center fh5co-table">
 						<div class="fh5co-intro fh5co-table-cell">
-							<h1 class="text-center">Course Materials</h1>
+							<h1 class="text-center">Courses</h1>
 							<p>I'm a teaching assistant at the University of Toronto.</br>
 							Available here are some materials (mostly solutions) for those courses.</p>
 						</div>
@@ -115,6 +115,16 @@
 							<a href="assets/MAT344F_17/quiz1/version_a/MAT344_F17_Quiz1_VerA.pdf">A</a>, 
 							<a href="assets/MAT344F_17/quiz1/version_b/MAT344_F17_Quiz1_VerB.pdf">B</a>, 
 							<a href="assets/MAT344F_17/quiz1/version_c/MAT344_F17_Quiz1_VerC.pdf">C</a>)
+						</li>
+						<li>
+							Assignment 1 
+							<a href="assets/MAT344F_17/assignment1/MAT344_F17_Assignment1.pdf">Solutions</a>
+						</li>
+						<li>
+							Quiz 2 Solutions (Ver. 
+							<a href="assets/MAT344F_17/quiz2/version_a/MAT344_F17_Quiz2_VerA.pdf">A</a>, 
+							<a href="assets/MAT344F_17/quiz2/version_b/MAT344_F17_Quiz2_VerB.pdf">B</a>, 
+							<a href="assets/MAT344F_17/quiz2/version_c/MAT344_F17_Quiz2_VerC.pdf">C</a>)
 						</li>
 						<!--
 						<img src="images/hero_1.jpg" alt="Free HTML5 by FreeHTML5.co" class="img-responsive">
