--- a/contact.html
+++ b/contact.html
@@ -103,11 +103,13 @@
 					<div class="col-md-6 col-md-push-1">
 						<h2>Email</h2>
 						<p>
-							<button class="btn" data-clipboard-text="a.ross@mail.utoronto.ca-not-part-of-my-email-" ><img src="assets/clippy.svg" width="13" alt="Copy to clipboard" title="Copy to clipboard"></button>
-							<a href="http://www.google.com/recaptcha/mailhide/d?k=012RqAzKQViO58rpLdpE3ybg==&amp;c=QXdZRlm30gk3JVz9EkSJq2DBZ33Ohe9KDukvvO0G2mY=" onclick="window.open('http://www.google.com/recaptcha/mailhide/d?k\x3d012RqAzKQViO58rpLdpE3ybg\x3d\x3d\x26c\x3dQXdZRlm30gk3JVz9EkSJq2DBZ33Ohe9KDukvvO0G2mY\x3d', '', 'toolbar=0,scrollbars=0,location=0,statusbar=0,menubar=0,resizable=0,width=500,height=300'); return false;" title="Reveal this e-mail address">a.ro...</a>@mail.utoronto.ca
+							<button class="btn" data-clipboard-text="a.ross@mail.utoronto.ca" ><img src="assets/clippy.svg" width="13" alt="Copy to clipboard" title="Copy to clipboard"></button>
+							<!-- <a href="http://www.google.com/recaptcha/mailhide/d?k=012RqAzKQViO58rpLdpE3ybg==&amp;c=QXdZRlm30gk3JVz9EkSJq2DBZ33Ohe9KDukvvO0G2mY=" onclick="window.open('http://www.google.com/recaptcha/mailhide/d?k\x3d012RqAzKQViO58rpLdpE3ybg\x3d\x3d\x26c\x3dQXdZRlm30gk3JVz9EkSJq2DBZ33Ohe9KDukvvO0G2mY\x3d', '', 'toolbar=0,scrollbars=0,location=0,statusbar=0,menubar=0,resizable=0,width=500,height=300'); return false;" title="Reveal this e-mail address">a.ro...</a> -->
+							a.ross@mail.utoronto.ca (U of T email)
 							<br>
-							<button class="btn" data-clipboard-text="andrew.ross.mail@gmail.com-not-part-of-my-email-"> <img src="assets/clippy.svg" width="13" alt="Copy to clipboard" title="Copy to clipboard"></button>
-							<a href="http://www.google.com/recaptcha/mailhide/d?k=01Tf9xljbEj-WIj9fQrgk4Fw==&amp;c=F1C6daFjkeuKabOMYhCv6V4Cul5gyLwq3CbmTugvg2M=" onclick="window.open('http://www.google.com/recaptcha/mailhide/d?k\x3d01Tf9xljbEj-WIj9fQrgk4Fw\x3d\x3d\x26c\x3dF1C6daFjkeuKabOMYhCv6V4Cul5gyLwq3CbmTugvg2M\x3d', '', 'toolbar=0,scrollbars=0,location=0,statusbar=0,menubar=0,resizable=0,width=500,height=300'); return false;" title="Reveal this e-mail address">andrew.ro...</a>@gmail.com
+							<button class="btn" data-clipboard-text="andrew.ross.mail@gmail.com"> <img src="assets/clippy.svg" width="13" alt="Copy to clipboard" title="Copy to clipboard"></button>
+							<!-- <a href="http://www.google.com/recaptcha/mailhide/d?k=01Tf9xljbEj-WIj9fQrgk4Fw==&amp;c=F1C6daFjkeuKabOMYhCv6V4Cul5gyLwq3CbmTugvg2M=" onclick="window.open('http://www.google.com/recaptcha/mailhide/d?k\x3d01Tf9xljbEj-WIj9fQrgk4Fw\x3d\x3d\x26c\x3dF1C6daFjkeuKabOMYhCv6V4Cul5gyLwq3CbmTugvg2M\x3d', '', 'toolbar=0,scrollbars=0,location=0,statusbar=0,menubar=0,resizable=0,width=500,height=300'); return false;" title="Reveal this e-mail address">andrew.ro...</a> -->
+							andrew.ross.mail@gmail.com (Personal email)
 							</p>
 					</div>
 				</div>
