--- a/projects.html
+++ b/projects.html
@@ -200,32 +200,35 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-4">
-					<h3>About Us</h3>
-					<p>She packed her seven versalia, put her initial into the belt and made herself on the way. When she reached the first hills of the Italic Mountains.</p>
+					<!-- <h3>About Us</h3>
+					<p>She packed her seven versalia, put her initial into the belt and made herself on the way. When she reached the first hills of the Italic Mountains.</p> -->
 				</div>
-				<div class="col-md-3 col-md-push-1">
+				<div class="col-sm-12 col-md-2">
 					<h3>Quick Links</h3>
 					<ul>
-						<li><a href="#">About Us</a></li>
-						<li><a href="#">Products</a></li>
-						<li><a href="#">Services</a></li>
-						<li><a href="#">Blog</a></li>
-						<li><a href="#">Contact</a></li>
+						<li><a href="about.html">About Me</a></li>
+						<li><a href="projects.html">Projects</a></li>
+						<li><a href="teaching.html">Teaching</a></li>
+						<li><a href="contact.html">Contact</a></li>
+						<br>
 					</ul>
 				</div>
-				<div class="col-md-3 col-md-push-1">
-					<h3>Follow Us</h3>
+				<div class="col-sm-12 col-md-6">
+					<h3>Connect</h3>
 					<ul class="fh5co-social">
-						<li><a href="#"><i class="icon-twitter"></i> <span>Twitter</span></a></li>
-						<li><a href="#"><i class="icon-facebook"></i> <span>Facebook</span></a></li>
-						<li><a href="#"><i class="icon-instagram"></i> <span>Instagram</span></a></li>
-						<li><a href="#"><i class="icon-google"></i> <span>Google Plus</span></a></li>
+						<!-- LinkedIn -->
+						<li><a href="https://www.linkedin.com/in/andrew-ross-47b795144/"><i class="icon-linkedin"></i> <span>andrew ross</span></a></li>
+						<!-- GitHub -->
+						<li><a href="https://github.com/andrewrosss"><i class="icon-github"></i> <span>andrewrosss</span></a></li>
+						<!-- Facebook -->
+						<li><a href="https://www.facebook.com/Arosss"><i class="icon-facebook"></i> <span>&nbsp;@arosss</span></a></li>
+						<!-- Instagram -->
+						<li><a href="https://www.instagram.com/lintstagramm/"><i class="icon-instagram"></i> <span>@lintstagramm (My overweight cat's istagram)</span></a></li>
+						<!-- Twitter -->
+						<li><a href="https://twitter.com/Andrewrosss"><i class="icon-twitter"></i> <span>@andrewrosss</span></a></li>
+						<!-- Google+ -->
+						<li><a href="https://plus.google.com/u/0/106302438894205825127"><i class="icon-google"></i> <span>+andrew ross</span></a></li>
 					</ul>
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-md-12 fh5co-copyright text-center">
-					<p><small>&copy; 2016 Free HTML5 Simple. All Rights Reserved. </small> <small>Made with care by <a href="http://freehtml5.co/" target="_blank">FreeHTML5.co</a> Demo Images: <a href="http://unsplash.com" target="_blank">Unsplash</a></small></p>
 				</div>
 			</div>
 		</div>
