minor changes here and there

--- a/about.html
+++ b/about.html
@@ -115,8 +115,9 @@
 				<div class="row">
 					<div class="col-md-8 col-md-offset-2 col-sm-12 col-sm-offset-0 col-xs-12 col-xs-offset-0 text-center fh5co-table">
 						<div class="fh5co-intro fh5co-table-cell">
-							<h1 class="text-center">The leadership</h1>
-							<p>Made with love by the fine folks at <a href="http://freehtml5.co">FreeHTML5.co</a></p>
+							<h1 class="text-center">Frequent Collaborators</h1>
+							<p>A couple people I do a lot of work with, <br>
+							and can't recommend them enough.</p>
 						</div>
 					</div>
 				</div>
@@ -126,10 +127,10 @@
 		<div class="fh5co-section">
 			<div class="container">
 				<div class="row">
-					<div class="col-md-4 fh5co-staff">
+					<div class="col-sm-12 col-md-4 fh5co-staff">
 						<img src="images/person3.jpg" alt="Free HTML5 Bootstrap Template" class="img-responsive">
-						<h3>**</h3>
-						<h4>Co-Founder, CEO</h4>
+						<h3>Alec Ross</h3>
+						<h4>Position</h4>
 						<p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.</p>
 						<ul class="fh5co-social">
 							<li><a href="#"><i class="icon-google"></i></a></li>
@@ -139,10 +140,10 @@
 							<li><a href="#"><i class="icon-instagram"></i></a></li>
 						</ul>
 					</div>
-					<div class="col-md-4 fh5co-staff">
+					<div class="col-sm-12 col-md-4 fh5co-staff">
 						<img src="images/person2.jpg" alt="Free HTML5 Bootstrap Template" class="img-responsive">
-						<h3>**</h3>
-						<h4>Co-Founder, CTO</h4>
+						<h3>Kelsey Byrne</h3>
+						<h4>Position</h4>
 						<p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.</p>
 						<ul class="fh5co-social">
 							<li><a href="#"><i class="icon-google"></i></a></li>
@@ -152,10 +153,10 @@
 							<li><a href="#"><i class="icon-instagram"></i></a></li>
 						</ul>
 					</div>
-					<div class="col-md-4 fh5co-staff">
+					<div class="col-sm-12 col-md-4 fh5co-staff">
 						<img src="images/person4.jpg" alt="Free HTML5 Bootstrap Template" class="img-responsive">
-						<h3>**</h3>
-						<h4>Co-Founder, Principal</h4>
+						<h3>Gideon Providence</h3>
+						<h4>Position</h4>
 						<p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.</p>
 						<ul class="fh5co-social">
 							<li><a href="#"><i class="icon-google"></i></a></li>
@@ -232,17 +233,17 @@
 					<h3>Connect</h3>
 					<ul class="fh5co-social">
 						<!-- LinkedIn -->
-						<li><a href="https://www.linkedin.com/in/andrew-ross-47b795144/"><i class="icon-linkedin"></i> <span>andrew ross</span></a></li>
+						<li><a href="#" onclick="window.open('https://www.linkedin.com/in/andrew-ross-47b795144/'); return false;"><i class="icon-linkedin"></i> <span>andrew ross</span></a></li>
 						<!-- GitHub -->
-						<li><a href="https://github.com/andrewrosss"><i class="icon-github"></i> <span>andrewrosss</span></a></li>
+						<li><a href="#" onclick="window.open('https://github.com/andrewrosss'); return false;"><i class="icon-github"></i> <span>andrewrosss</span></a></li>
 						<!-- Facebook -->
-						<li><a href="https://www.facebook.com/Arosss"><i class="icon-facebook"></i> <span>&nbsp;@arosss</span></a></li>
+						<li><a href="#" onclick="window.open('https://www.facebook.com/Arosss'); return false;"><i class="icon-facebook"></i> <span>&nbsp;@arosss</span></a></li>
 						<!-- Instagram -->
-						<li><a href="https://www.instagram.com/lintstagramm/"><i class="icon-instagram"></i> <span>@lintstagramm (My overweight cat's istagram)</span></a></li>
+						<li><a href="#" onclick="window.open('https://www.instagram.com/lintstagramm/'); return false;"><i class="icon-instagram"></i> <span>@lintstagramm (My overweight cat's istagram)</span></a></li>
 						<!-- Twitter -->
-						<li><a href="https://twitter.com/Andrewrosss"><i class="icon-twitter"></i> <span>@andrewrosss</span></a></li>
+						<li><a href="#" onclick="window.open('https://twitter.com/Andrewrosss'); return false;"><i class="icon-twitter"></i> <span>@andrewrosss</span></a></li>
 						<!-- Google+ -->
-						<li><a href="https://plus.google.com/u/0/106302438894205825127"><i class="icon-google"></i> <span>+andrew ross</span></a></li>
+						<li><a href="#" onclick="window.open('https://plus.google.com/u/0/106302438894205825127'); return false;"><i class="icon-google"></i> <span>+andrew ross</span></a></li>
 					</ul>
 				</div>
 			</div>
