--- a/contact.html
+++ b/contact.html
@@ -167,17 +167,17 @@
 					<h3>Connect</h3>
 					<ul class="fh5co-social">
 						<!-- LinkedIn -->
-						<li><a href="https://www.linkedin.com/in/andrew-ross-47b795144/"><i class="icon-linkedin"></i> <span>andrew ross</span></a></li>
+						<li><a href="#" onclick="window.open('https://www.linkedin.com/in/andrew-ross-47b795144/'); return false;"><i class="icon-linkedin"></i> <span>andrew ross</span></a></li>
 						<!-- GitHub -->
-						<li><a href="https://github.com/andrewrosss"><i class="icon-github"></i> <span>andrewrosss</span></a></li>
+						<li><a href="#" onclick="window.open('https://github.com/andrewrosss'); return false;"><i class="icon-github"></i> <span>andrewrosss</span></a></li>
 						<!-- Facebook -->
-						<li><a href="https://www.facebook.com/Arosss"><i class="icon-facebook"></i> <span>&nbsp;@arosss</span></a></li>
+						<li><a href="#" onclick="window.open('https://www.facebook.com/Arosss'); return false;"><i class="icon-facebook"></i> <span>&nbsp;@arosss</span></a></li>
 						<!-- Instagram -->
-						<li><a href="https://www.instagram.com/lintstagramm/"><i class="icon-instagram"></i> <span>@lintstagramm (My overweight cat's istagram)</span></a></li>
+						<li><a href="#" onclick="window.open('https://www.instagram.com/lintstagramm/'); return false;"><i class="icon-instagram"></i> <span>@lintstagramm (My overweight cat's istagram)</span></a></li>
 						<!-- Twitter -->
-						<li><a href="https://twitter.com/Andrewrosss"><i class="icon-twitter"></i> <span>@andrewrosss</span></a></li>
+						<li><a href="#" onclick="window.open('https://twitter.com/Andrewrosss'); return false;"><i class="icon-twitter"></i> <span>@andrewrosss</span></a></li>
 						<!-- Google+ -->
-						<li><a href="https://plus.google.com/u/0/106302438894205825127"><i class="icon-google"></i> <span>+andrew ross</span></a></li>
+						<li><a href="#" onclick="window.open('https://plus.google.com/u/0/106302438894205825127'); return false;"><i class="icon-google"></i> <span>+andrew ross</span></a></li>
 					</ul>
 				</div>
 			</div>
