add content to teaching.html

--- a/contact.html
+++ b/contact.html
@@ -104,10 +104,12 @@
 						<h2>Email</h2>
 						<p>
 							<button class="btn" data-clipboard-text="a.ross@mail.utoronto.ca" ><img src="assets/clippy.svg" width="13" alt="Copy to clipboard" title="Copy to clipboard"></button>
+							<!-- ANTI-SPAM MEASURE -->
 							<!-- <a href="http://www.google.com/recaptcha/mailhide/d?k=012RqAzKQViO58rpLdpE3ybg==&amp;c=QXdZRlm30gk3JVz9EkSJq2DBZ33Ohe9KDukvvO0G2mY=" onclick="window.open('http://www.google.com/recaptcha/mailhide/d?k\x3d012RqAzKQViO58rpLdpE3ybg\x3d\x3d\x26c\x3dQXdZRlm30gk3JVz9EkSJq2DBZ33Ohe9KDukvvO0G2mY\x3d', '', 'toolbar=0,scrollbars=0,location=0,statusbar=0,menubar=0,resizable=0,width=500,height=300'); return false;" title="Reveal this e-mail address">a.ro...</a> -->
 							a.ross@mail.utoronto.ca (U of T)
 							<br>
 							<button class="btn" data-clipboard-text="andrew.ross.mail@gmail.com"> <img src="assets/clippy.svg" width="13" style="background-color:transparent;" alt="Copy to clipboard" title="Copy to clipboard"></button>
+							<!-- ANTI-SPAM MEASURE -->
 							<!-- <a href="http://www.google.com/recaptcha/mailhide/d?k=01Tf9xljbEj-WIj9fQrgk4Fw==&amp;c=F1C6daFjkeuKabOMYhCv6V4Cul5gyLwq3CbmTugvg2M=" onclick="window.open('http://www.google.com/recaptcha/mailhide/d?k\x3d01Tf9xljbEj-WIj9fQrgk4Fw\x3d\x3d\x26c\x3dF1C6daFjkeuKabOMYhCv6V4Cul5gyLwq3CbmTugvg2M\x3d', '', 'toolbar=0,scrollbars=0,location=0,statusbar=0,menubar=0,resizable=0,width=500,height=300'); return false;" title="Reveal this e-mail address">andrew.ro...</a> -->
 							andrew.ross.mail@gmail.com (Personal)
 							</p>
@@ -173,7 +175,7 @@
 						<!-- Facebook -->
 						<li><a href="#" onclick="window.open('https://www.facebook.com/Arosss'); return false;"><i class="icon-facebook"></i> <span>&nbsp;@arosss</span></a></li>
 						<!-- Instagram -->
-						<li><a href="#" onclick="window.open('https://www.instagram.com/lintstagramm/'); return false;"><i class="icon-instagram"></i> <span>@lintstagramm (My overweight cat's istagram)</span></a></li>
+						<li><a href="#" onclick="window.open('https://www.instagram.com/lintstagramm/'); return false;"><i class="icon-instagram"></i> <span>@lintstagramm</span></a></li>
 						<!-- Twitter -->
 						<li><a href="#" onclick="window.open('https://twitter.com/Andrewrosss'); return false;"><i class="icon-twitter"></i> <span>@andrewrosss</span></a></li>
 						<!-- Google+ -->
