--- a/projects.html
+++ b/projects.html
@@ -206,10 +206,10 @@
 				<div class="col-sm-12 col-md-2">
 					<h3>Quick Links</h3>
 					<ul>
-						<li><a href="about.html">About Me</a></li>
 						<li><a href="projects.html">Projects</a></li>
 						<li><a href="teaching.html">Teaching</a></li>
 						<li><a href="contact.html">Contact</a></li>
+						<li><a href="about.html">About Me</a></li>
 						<br>
 					</ul>
 				</div>
@@ -223,7 +223,7 @@
 						<!-- Facebook -->
 						<li><a href="#" onclick="window.open('https://www.facebook.com/Arosss'); return false;"><i class="icon-facebook"></i> <span>&nbsp;@arosss</span></a></li>
 						<!-- Instagram -->
-						<li><a href="#" onclick="window.open('https://www.instagram.com/lintstagramm/'); return false;"><i class="icon-instagram"></i> <span>@lintstagramm (My overweight cat's istagram)</span></a></li>
+						<li><a href="#" onclick="window.open('https://www.instagram.com/lintstagramm/'); return false;"><i class="icon-instagram"></i> <span>@lintstagramm</span></a></li>
 						<!-- Twitter -->
 						<li><a href="#" onclick="window.open('https://twitter.com/Andrewrosss'); return false;"><i class="icon-twitter"></i> <span>@andrewrosss</span></a></li>
 						<!-- Google+ -->
