--- a/teaching.html
+++ b/teaching.html
@@ -86,20 +86,26 @@
 				<div class="row">
 					<div class="col-md-8 col-md-offset-2 col-sm-12 col-sm-offset-0 col-xs-12 col-xs-offset-0 text-center fh5co-table">
 						<div class="fh5co-intro fh5co-table-cell">
-							<h1 class="text-center">Courses</h1>
-							<p>I'm a teaching assistant at the University of Toronto.</br>
-							Available here are some materials (mostly solutions) for those courses.</p>
+							<h1 class="text-center">Current Courses</h1>
+							<p>I am currently a teaching assistant at the University of Toronto</br>
+							Below are some materials for courses currently underway</p>
 						</div>
 					</div>
 				</div>
 			</div>
 		</div>
+
+		<!-- CURRENT COURSES -->
 		<div class="fh5co-section">
 			<div class="container">
 				<div class="row">
+					<!-- <h3 class='text-center'> Current Courses</h3> -->
 					<div class="col-md-6">
 						<h2>MAT344 - Introduction to Combinatorics</h2>
-						<p>MAT344 covers basic counting principles, generating functions, permutations with restrictions, as well as  fundamentals of graph theory with algorithms; applications (including network flows). Combinatorial structures including block designs and finite geometries. <a href="assets/MAT344F_17/MAT344F_17_syllabus.pdf">Syllabus</a>.</p>
+						<p>MAT344 covers basic counting principles, generating functions, permutations with restrictions, as well as  fundamentals of graph theory with algorithms; applications (including network flows). Combinatorial structures including block designs and finite geometries. </p>
+
+						<p>
+						<a href="assets/MAT344F_17/MAT344F_17_syllabus.pdf">Syllabus</a></p>
 						<!-- 
 						<ul class="fh5co-check">
 							<li>Web Design</li>
@@ -109,39 +115,76 @@
 						</ul> 
 						-->
 					</div>
-					<div class="col-md-6">
-						<li>
-							Quiz 1 Solutions (Ver. 
-							<a href="assets/MAT344F_17/quiz1/version_a/MAT344_F17_Quiz1_VerA.pdf">A</a>, 
-							<a href="assets/MAT344F_17/quiz1/version_b/MAT344_F17_Quiz1_VerB.pdf">B</a>, 
-							<a href="assets/MAT344F_17/quiz1/version_c/MAT344_F17_Quiz1_VerC.pdf">C</a>)
-						</li>
-						<li>
-							Assignment 1 
-							<a href="assets/MAT344F_17/assignment1/MAT344_F17_Assignment1.pdf">Solutions</a>
-						</li>
-						<li>
-							Quiz 2 Solutions (Ver. 
-							<a href="assets/MAT344F_17/quiz2/version_a/MAT344_F17_Quiz2_VerA.pdf">A</a>, 
-							<a href="assets/MAT344F_17/quiz2/version_b/MAT344_F17_Quiz2_VerB.pdf">B</a>, 
-							<a href="assets/MAT344F_17/quiz2/version_c/MAT344_F17_Quiz2_VerC.pdf">C</a>)
-						</li>
-						<!--
-						<img src="images/hero_1.jpg" alt="Free HTML5 by FreeHTML5.co" class="img-responsive">
-						-->
+					<div class="col-md-6 col-md-push-1">
+						<ul>
+							<li>
+								Quiz 1 Solutions (Ver. 
+								<a href="assets/MAT344F_17/quiz1/version_a/MAT344_F17_Quiz1_VerA.pdf">A</a>, 
+								<a href="assets/MAT344F_17/quiz1/version_b/MAT344_F17_Quiz1_VerB.pdf">B</a>, 
+								<a href="assets/MAT344F_17/quiz1/version_c/MAT344_F17_Quiz1_VerC.pdf">C</a>)
+							</li>
+							<li>
+								Assignment 1 
+								<a href="assets/MAT344F_17/assignment1/MAT344_F17_Assignment1.pdf">Solutions</a>
+							</li>
+							<li>
+								Quiz 2 Solutions (Ver. 
+								<a href="assets/MAT344F_17/quiz2/version_a/MAT344_F17_Quiz2_VerA.pdf">A</a>, 
+								<a href="assets/MAT344F_17/quiz2/version_b/MAT344_F17_Quiz2_VerB.pdf">B</a>, 
+								<a href="assets/MAT344F_17/quiz2/version_c/MAT344_F17_Quiz2_VerC.pdf">C</a>)
+							</li>
+							<li>
+								Assignment 2 
+								<a href="assets/MAT344F_17/assignment2/MAT344_F17_Assignment2.pdf">Solutions</a>
+							</li>
+							<li>
+								Term Test 
+								<a href="assets/MAT344F_17/test/MAT344_F17_Test.pdf">Solutions</a>
+							</li>
+							<li>
+								Assignment 3 
+								<a href="assets/MAT344F_17/assignment3/MAT344_F17_Assignment3.pdf">Solutions</a>
+							</li>
+							<li>
+								Quiz 3 Solutions (Ver. 
+								<a href="assets/MAT344F_17/quiz3/version_a/MAT344_F17_Quiz3_VerA.pdf">A</a>, 
+								<a href="assets/MAT344F_17/quiz3/version_b/MAT344_F17_Quiz3_VerB.pdf">B</a>, 
+								<a href="assets/MAT344F_17/quiz3/version_c/MAT344_F17_Quiz3_VerC.pdf">C</a>)
+							</li>
+							<li>
+								Assignment 4 
+								<a href="assets/MAT344F_17/assignment4/MAT344_F17_Assignment4.pdf">Solutions</a>
+							</li>
+							<li>
+								Quiz 4 Solutions (Ver. 
+								<a href="assets/MAT344F_17/quiz4/version_a/MAT344_F17_Quiz4_VerA.pdf">A</a>, 
+								<a href="assets/MAT344F_17/quiz4/version_b/MAT344_F17_Quiz4_VerB.pdf">B</a>, 
+								<a href="assets/MAT344F_17/quiz4/version_c/MAT344_F17_Quiz4_VerC.pdf">C</a>)
+							</li>
+							<li>
+								Assignment 5 Solutions
+							</li>
+							<li>
+								Quiz 5 Solutions (Ver. A, B, C)
+							</li>
+							<!--
+							<img src="images/hero_1.jpg" alt="Free HTML5 by FreeHTML5.co" class="img-responsive">
+							-->
+						</ul>
 					</div>
 				</div>
 			</div>
 		</div>
 
+		<!-- PAST COURSES -->
 		<div class="fh5co-parallax" style="background-image: url(images/hero_2.jpg);" data-stellar-background-ratio="0.5">
 			<div class="overlay"></div>
 			<div class="container">
 				<div class="row">
 					<div class="col-md-8 col-md-offset-2 col-sm-12 col-sm-offset-0 col-xs-12 col-xs-offset-0 text-center fh5co-table">
 						<div class="fh5co-intro fh5co-table-cell">
-							<h1 class="text-center">Simple yet elegant</h1>
-							<p>Made with love by the fine folks at <a href="http://freehtml5.co">FreeHTML5.co</a></p>
+							<h1 class="text-center">Past Courses</h1>
+							<p> Other courses for which I have been a TA </p>
 						</div>
 					</div>
 				</div>
@@ -151,25 +194,49 @@
 		<div class="fh5co-section">
 			<div class="container">
 				<div class="row">
-					<div class="col-md-5 col-md-push-7">
-						<h2>Web Design</h2>
-						<p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.</p>
-						<ul class="fh5co-check">
-							<li>Web Design</li>
-							<li>User Experience</li>
-							<li>User Interface</li>
-							<li>Search Engine Optimization</li>
+					<div class="col-sm-12 col-md-6">
+						<h3>University of Toronto (Summer 2017)</h3>
+						<ul class="list-unstyled"> <!-- class="fh5co-check" -->
+							<li>MAT134 &mdash; Calculus for Life Sciences</li>
+							<li>MAT133 &mdash; Calc and Lin Alg for Commerce</li>
+							<br>
 						</ul>
 					</div>
-					<div class="col-md-7 col-md-pull-5">
-						<img src="images/hero_1.jpg" alt="Free HTML5 by FreeHTML5.co" class="img-responsive">
+					<div class="col-sm-12 col-md-6">
+						<h3>University of Toronto (2016 - 2017)</h3>
+						<ul class="list-unstyled"> <!-- class="fh5co-check" -->
+							<li>MAT240 &mdash; Algebra I</li>
+							<li>MAT194 &mdash; Calculus I</li>
+							<li>MAT136 &mdash; Calculus I (B)</li>
+							<li>MAT102 &mdash; Introduction to Proofs</li>
+							<br>
+						</ul>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-sm-12 col-md-6">
+						<h3>University of Toronto (Summer 2016)</h3>
+						<ul class="list-unstyled"> <!-- class="fh5co-check" -->
+							<li>MAT134 &mdash; Calculus for Life Sciences</li>
+							<br>
+						</ul>
+					</div>
+					<div class="col-sm-12 col-md-6">
+						<h3>University of Toronto (2015 - 2016)</h3>
+						<ul class="list-unstyled"> <!-- class="fh5co-check" -->
+							<li>MAT224 &mdash; Linear Algebra II</li>
+							<li>MAT137 &mdash; Calculus!</li>
+							<li>MAT135 &mdash; Calculus I (A)</li>
+							<li>MAT136 &mdash; Calculus I (B)</li>
+							<br>
+						</ul>
 					</div>
 				</div>
 			</div>
 		</div>
 
 
-		<div class="fh5co-parallax" style="background-image: url(images/hero_3.jpg);" data-stellar-background-ratio="0.5">
+		<!-- <div class="fh5co-parallax" style="background-image: url(images/hero_3.jpg);" data-stellar-background-ratio="0.5">
 			<div class="overlay"></div>
 			<div class="container">
 				<div class="row">
@@ -203,9 +270,8 @@
 						<p><a href="#" class="btn btn-primary">Get started now!</a></p>
 					</div>
 				</div>
-
 			</div>
-		</div>
+		</div> -->
 
 	</div> <!-- END fh5co-wrap -->
 
@@ -237,7 +303,7 @@
 						<!-- Facebook -->
 						<li><a href="#" onclick="window.open('https://www.facebook.com/Arosss'); return false;"><i class="icon-facebook"></i> <span>&nbsp;@arosss</span></a></li>
 						<!-- Instagram -->
-						<li><a href="#" onclick="window.open('https://www.instagram.com/lintstagramm/'); return false;"><i class="icon-instagram"></i> <span>@lintstagramm (My overweight cat's istagram)</span></a></li>
+						<li><a href="#" onclick="window.open('https://www.instagram.com/lintstagramm/'); return false;"><i class="icon-instagram"></i> <span>@lintstagramm</span></a></li>
 						<!-- Twitter -->
 						<li><a href="#" onclick="window.open('https://twitter.com/Andrewrosss'); return false;"><i class="icon-twitter"></i> <span>@andrewrosss</span></a></li>
 						<!-- Google+ -->
