add content to about.html

--- a/about.html
+++ b/about.html
@@ -73,7 +73,7 @@
 						<li><a href="index.html"><span>Home</span></a></li>
 						<li><a href="projects.html"><span>Projects</span></a></li>
 						<li><a href="teaching.html"><span>Teaching</span></a></li>
-						<li class="fh5co-active"><a href="about.html"><span>About Me</span></a></li>
+						<li class="fh5co-active"><a href="about.html"><span>About</span></a></li>
 						<li><a href="contact.html"><span>Contact</span></a></li>
 					</ul>
 				</nav>
@@ -86,8 +86,8 @@
 				<div class="row">
 					<div class="col-md-8 col-md-offset-2 col-sm-12 col-sm-offset-0 col-xs-12 col-xs-offset-0 text-center fh5co-table">
 						<div class="fh5co-intro fh5co-table-cell">
-							<h1 class="text-center">About us</h1>
-							<p>Made with love by the fine folks at <a href="http://freehtml5.co">FreeHTML5.co</a></p>
+							<h1 class="text-center">About Me</h1>
+							<!-- <p>Made with love by the fine folks at <a href="http://freehtml5.co">FreeHTML5.co</a></p> -->
 						</div>
 					</div>
 				</div>
@@ -116,8 +116,8 @@
 					<div class="col-md-8 col-md-offset-2 col-sm-12 col-sm-offset-0 col-xs-12 col-xs-offset-0 text-center fh5co-table">
 						<div class="fh5co-intro fh5co-table-cell">
 							<h1 class="text-center">Frequent Collaborators</h1>
-							<p>A couple people I do a lot of work with, <br>
-							and can't recommend them enough.</p>
+							<p>A couple people I do a lot of work with. <br>
+							I can't recommend them enough.</p>
 						</div>
 					</div>
 				</div>
@@ -130,7 +130,7 @@
 					<div class="col-sm-12 col-md-4 fh5co-staff">
 						<img src="images/person3.jpg" alt="Free HTML5 Bootstrap Template" class="img-responsive">
 						<h3>Alec Ross</h3>
-						<h4>Position</h4>
+						<h4>Data Scientist &mdash; Brampton ON CA</h4>
 						<p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.</p>
 						<ul class="fh5co-social">
 							<li><a href="#"><i class="icon-google"></i></a></li>
@@ -143,7 +143,7 @@
 					<div class="col-sm-12 col-md-4 fh5co-staff">
 						<img src="images/person2.jpg" alt="Free HTML5 Bootstrap Template" class="img-responsive">
 						<h3>Kelsey Byrne</h3>
-						<h4>Position</h4>
+						<h4>Illustrator/Graphic Designer &mdash; Toronto ON CA</h4>
 						<p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.</p>
 						<ul class="fh5co-social">
 							<li><a href="#"><i class="icon-google"></i></a></li>
@@ -156,7 +156,7 @@
 					<div class="col-sm-12 col-md-4 fh5co-staff">
 						<img src="images/person4.jpg" alt="Free HTML5 Bootstrap Template" class="img-responsive">
 						<h3>Gideon Providence</h3>
-						<h4>Position</h4>
+						<h4>Data Scientist &mdash; Toronto ON CA</h4>
 						<p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.</p>
 						<ul class="fh5co-social">
 							<li><a href="#"><i class="icon-google"></i></a></li>
@@ -224,8 +224,8 @@
 					<ul>
 						<li><a href="projects.html">Projects</a></li>
 						<li><a href="teaching.html">Teaching</a></li>
+						<li><a href="about.html">About</a></li>
 						<li><a href="contact.html">Contact</a></li>
-						<li><a href="about.html">About Me</a></li>
 						<br>
 					</ul>
 				</div>
