--- a/projects.html
+++ b/projects.html
@@ -73,7 +73,7 @@
 						<li><a href="index.html"><span>Home</span></a></li>
 						<li class="fh5co-active"><a href="services.html"><span>Projects</span></a></li>
 						<li><a href="teaching.html"><span>Teaching</span></a></li>
-						<li><a href="about.html"><span>About Me</span></a></li>
+						<li><a href="about.html"><span>About</span></a></li>
 						<li><a href="contact.html"><span>Contact</span></a></li>
 					</ul>
 				</nav>
@@ -88,7 +88,7 @@
 					<div class="col-md-8 col-md-push-2 col-sm-12 col-sm-offset-0 col-xs-12 col-xs-offset-0 text-center fh5co-table">
 						<div class="fh5co-intro fh5co-table-cell">
 							<h1 class="text-center">Machine Learning Projects</h1>
-							<p>These are some of the interesting ML projects that I've worked on. </br>
+							<p>These are some of the interesting ML projects that I've worked on </br>
 							All of my projects can be found on <a href="https://github.com/andrewrosss">GitHub</a></p>
 						</div>
 					</div>
@@ -208,8 +208,8 @@
 					<ul>
 						<li><a href="projects.html">Projects</a></li>
 						<li><a href="teaching.html">Teaching</a></li>
+						<li><a href="about.html">About</a></li>
 						<li><a href="contact.html">Contact</a></li>
-						<li><a href="about.html">About Me</a></li>
 						<br>
 					</ul>
 				</div>
