--- a/teaching.html
+++ b/teaching.html
@@ -73,7 +73,7 @@
 						<li><a href="index.html"><span>Home</span></a></li>
 						<li><a href="projects.html"><span>Projects</span></a></li>
 						<li class="fh5co-active"><a href="teaching.html"><span>Teaching</span></a></li>
-						<li><a href="about.html"><span>About Me</span></a></li>
+						<li><a href="about.html"><span>About</span></a></li>
 						<li><a href="contact.html"><span>Contact</span></a></li>
 					</ul>
 				</nav>
@@ -286,9 +286,9 @@
 				<div class="col-sm-12 col-md-2">
 					<h3>Quick Links</h3>
 					<ul>
-						<li><a href="about.html">About Me</a></li>
 						<li><a href="projects.html">Projects</a></li>
 						<li><a href="teaching.html">Teaching</a></li>
+						<li><a href="about.html">About</a></li>
 						<li><a href="contact.html">Contact</a></li>
 						<br>
 					</ul>
