add images to about.html, change parallax 0.5 -> 0.8

--- a/about.html
+++ b/about.html
@@ -116,7 +116,7 @@
 					<div class="col-md-8 col-md-offset-2 col-sm-12 col-sm-offset-0 col-xs-12 col-xs-offset-0 text-center fh5co-table">
 						<div class="fh5co-intro fh5co-table-cell">
 							<h1 class="text-center">Frequent Collaborators</h1>
-							<p>A couple people I do a lot of work with. <br>
+							<p>A few people I do a lot of work with. <br>
 							I can't recommend them enough.</p>
 						</div>
 					</div>
@@ -128,35 +128,45 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-sm-12 col-md-4 fh5co-staff">
-						<img src="images/person3.jpg" alt="Free HTML5 Bootstrap Template" class="img-responsive">
+						<img src="images/alec.jpg" alt="Alec Ross" class="img-responsive">
 						<h3>Alec Ross</h3>
 						<h4>Data Scientist &mdash; Brampton ON CA</h4>
 						<p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.</p>
 						<ul class="fh5co-social">
-							<li><a href="#"><i class="icon-google"></i></a></li>
-							<li><a href="#"><i class="icon-dribbble"></i></a></li>
-							<li><a href="#"><i class="icon-twitter"></i></a></li>
-							<li><a href="#"><i class="icon-facebook"></i></a></li>
-							<li><a href="#"><i class="icon-instagram"></i></a></li>
+							<!-- LinkedIn -->
+							<li><a href="#" onclick="window.open('https://www.linkedin.com/in/andrew-ross-47b795144/'); return false;"><i class="icon-linkedin"></i></a></li>
+							<!-- GitHub -->
+							<li><a href="#" onclick="window.open('https://github.com/andrewrosss'); return false;"><i class="icon-github"></i></a></li>
+							<!-- Facebook -->
+							<li><a href="#" onclick="window.open('https://www.facebook.com/Arosss'); return false;"><i class="icon-facebook"></i></a></li>
+							<!-- Instagram -->
+							<li><a href="#" onclick="window.open('https://www.instagram.com/lintstagramm/'); return false;"><i class="icon-instagram"></i></a></li>
+							<!-- Twitter -->
+							<li><a href="#" onclick="window.open('https://twitter.com/Andrewrosss'); return false;"><i class="icon-twitter"></i></a></li>
+							<!-- Google+ -->
+							<li><a href="#" onclick="window.open('https://plus.google.com/u/0/106302438894205825127'); return false;"><i class="icon-googleplus"></i></a></li>
 						</ul>
 						<br>
 					</div>
 					<div class="col-sm-12 col-md-4 fh5co-staff">
-						<img src="images/person2.jpg" alt="Free HTML5 Bootstrap Template" class="img-responsive">
+						<img src="images/kelsey_square.jpg" alt="Kelsey Byrne" class="img-responsive">
 						<h3>Kelsey Byrne</h3>
 						<h4>Illustrator/Graphic Designer &mdash; Toronto ON CA</h4>
 						<p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.</p>
 						<ul class="fh5co-social">
-							<li><a href="#"><i class="icon-google"></i></a></li>
-							<li><a href="#"><i class="icon-dribbble"></i></a></li>
-							<li><a href="#"><i class="icon-twitter"></i></a></li>
-							<li><a href="#"><i class="icon-facebook"></i></a></li>
-							<li><a href="#"><i class="icon-instagram"></i></a></li>
+							<!-- LinkedIn -->
+							<li><a href="#" onclick="window.open('https://www.linkedin.com/in/kelsey-byrne-5a70b1137/'); return false;"><i class="icon-linkedin"></i></a></li>
+							<!-- personal website -->
+							<li><a href="#" onclick="window.open('https://www.kelsey-byrne.com/'); return false;"><i class="icon-google"></i></a></li>
+							<!-- Facebook -->
+							<li><a href="#" onclick="window.open('https://www.facebook.com/kelsey.byrne.56'); return false;"><i class="icon-facebook"></i></a></li>
+							<!-- Instagram -->
+							<li><a href="#" onclick="window.open('https://www.instagram.com/byrne_arts/'); return false;"><i class="icon-instagram"></i></a></li>
 						</ul>
 						<br>
 					</div>
 					<div class="col-sm-12 col-md-4 fh5co-staff">
-						<img src="images/person4.jpg" alt="Free HTML5 Bootstrap Template" class="img-responsive">
+						<img src="images/jevan.jpg" alt="Gideon Providence" class="img-responsive">
 						<h3>Gideon Providence</h3>
 						<h4>Data Scientist &mdash; Toronto ON CA</h4>
 						<p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.</p>
@@ -245,7 +255,7 @@
 						<!-- Twitter -->
 						<li><a href="#" onclick="window.open('https://twitter.com/Andrewrosss'); return false;"><i class="icon-twitter"></i> <span>@andrewrosss</span></a></li>
 						<!-- Google+ -->
-						<li><a href="#" onclick="window.open('https://plus.google.com/u/0/106302438894205825127'); return false;"><i class="icon-google"></i> <span>+andrew ross</span></a></li>
+						<li><a href="#" onclick="window.open('https://plus.google.com/u/0/106302438894205825127'); return false;"><i class="icon-googleplus"></i> <span>+andrew ross</span></a></li>
 					</ul>
 				</div>
 			</div>
