update info in index.html

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 			</div>
 		</header>
 
-		<div class="fh5co-parallax" style="background-image: url(images/night_sky.jpg);">
+		<div class="fh5co-parallax" style="background-image: url(images/night_sky.jpg);background-position: center;">
 			<div class="overlay"></div>
 			<div class="container">
 				<div class="row">
@@ -98,32 +98,40 @@
 		<div class="fh5co-section">
 			<div class="container">
 				<div class="row">
-					<div class="col-md-6">
-						<h2>**ADD** bio/personal statement</h2>
-						<p>**ADD** Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar. The Big Oxmox advised her not to do so, because there were thousands of bad Commas, wild Question Marks and devious Semikoli, but the Little Blind Text didn’t listen.</p>
-					</div>
-					<div class="col-md-6">
+					<div id="head_shot" class="col-sm-12 col-md-5 col-md-push-7">
 						<img src="images/head_shot_1.jpg" alt="" class="img-responsive">
+					</div>
+					<br>
+					<div class="col-sm-12 col-md-7 col-md-pull-5">
+						<h2>Who I Am</h2>
+						<p>I am a mathematician, budding data scientist and machine learning enthusiast. Since primary school I have been passionate about mathematics. I was fascinated by its potential to distill abstract concepts to their core principles and demystify complex ideas. Pursuing a bachelor's degree and subsequently a master's degree in maths has cemented my love of the subject and served to highlight its ubiquity.</p>
+
+						<p>Two years ago I was introduced to concept of machine learning and since then I have had an insatiable need to learn as much as possible about the discipline. Recently my interests have found themselves in the area of deep learning. I'm captivated by the shear volume of research and the mind boggling applications coming out of this area - almost daily.</p>
+
+						<p>My goal is to be an active contributer to the field. The concept of solving real world problems using advanced AI algorithms is what really excites me.</p>
+
+						<p>So whether it's training myself, neural networks or my girlfriends dog, I am always trying to reach my goals and learn new skills through new experiences.</p>
 					</div>
 				</div>
 			</div>
 		</div>
 
-		<div class="fh5co-parallax" style="background-image: url(images/graph.jpg);">
+		<div class="fh5co-parallax" style="background-image: url(images/toronto_skyline3.jpg); background-position: center;">
 			<div class="overlay"></div>
 			<div class="container">
 				<div class="row">
 					<div class="col-md-8 col-md-offset-2 col-sm-12 col-sm-offset-0 col-xs-12 col-xs-offset-0 text-center fh5co-table">
 						<div class="fh5co-intro fh5co-table-cell">
-							<h1 class="text-center"> </h1>
-							<p>**Nothing here probably** </p>
+							<!-- <h1 class="text-center"> </h1>
+							<p>**Nothing here probably** </p> -->
 						</div>
 					</div>
 				</div>
 			</div>
 		</div>
 
-		<div class="fh5co-section">
+		<!-- SECTION -->
+		<!-- <div class="fh5co-section">
 			<div class="container">
 				
 				<div class="row">
@@ -178,8 +186,8 @@
 			</div>
 		</div>
 
-
-		<div class="fh5co-parallax" style="background-image: url(images/hero_3.jpg);">
+		
+		<div class="fh5co-parallax" style="background-image: url(images/toronto_skyline3.jpg); background-position: center;">
 			<div class="overlay"></div>
 			<div class="container">
 				<div class="row">
@@ -191,9 +199,10 @@
 					</div>
 				</div>
 			</div>
-		</div>
+		</div> -->
 
-		<div class="fh5co-section">
+		<!-- SECTION -->
+		<!-- <div class="fh5co-section">
 			<div class="container">
 
 				<div class="row">
@@ -213,7 +222,7 @@
 				</div>
 
 			</div>
-		</div>
+		</div> -->
 
 	</div> <!-- END fh5co-wrap -->
 
@@ -253,6 +262,11 @@
 					</ul>
 				</div>
 			</div>
+			<!-- <div class="row">
+				<div class="col-md-12 fh5co-copyright text-center">
+					<p><small>&copy; 2016 Free HTML5 Simple. All Rights Reserved. </small> <small>Made with care by <a href="http://freehtml5.co/" target="_blank">FreeHTML5.co</a> Demo Images: <a href="http://unsplash.com" target="_blank">Unsplash</a></small></p>
+				</div>
+			</div> -->
 		</div>
 	</footer>
 	
