add links to project headings in projects.html

--- a/projects.html
+++ b/projects.html
@@ -113,7 +113,7 @@
 				<!-- PROJECT -->
 				<div class="row">
 					<div class="col-sm-12 col-md-6">
-						<h2>Oracle &mdash; Mark Prediction Web App</h2>
+						<h2><a href="#" onclick="window.open('https://markoracle.herokuapp.com'); return false;">Oracle &mdash; Mark Prediction Web App</a></h2>
 						<p>(IN PROGRESS)</p>
 					</div>
 					<div class="col-sm-12 col-md-6">
@@ -124,7 +124,7 @@
 				<!-- PORJECT -->
 				<div class="row">
 					<div class="col-md-6">
-						<h2>Capsule Neural Network</h2>
+						<h2><a href="#" onclick="window.open('https://github.com/alecross89/CapsuleNetwork'); return false;">Capsule Neural network</a></h2>
 						<p>(IN PROGRESS)</p>
 					</div>
 					<div class="col-md-6">
@@ -135,7 +135,7 @@
 				<!-- PROJECT -->
 				<div class="row">
 					<div class="col-sm-12 col-md-6">
-						<h2>Style Transfer</h2>
+						<h2><a href="#" onclick="window.open('https://github.com/andrewrosss/style_transfer'); return false;">Style Transfer</a></h2>
 						<p>I implemeneted the style transfer network described in the paper <a href="#" onclick="window.open('https://arxiv.org/abs/1508.06576'); return false;">A Neural Algorithm of Artistic Style</a> by Gatys, Ecker and Bethge.</p>
 						
 						<p>The basic premise is to take two existing images - typically one image is thought of as the "content" image while the other is thought of as the "style" image -  along with a third image of random noise and incrementally change the pixel values of the noisey image.</p>
@@ -181,7 +181,7 @@
 				<!-- PROJECT -->
 				<div class="row">
 					<div class="col-sm-12 col-md-6">
-						<h2>Deep Convolutional GAN</h2>
+						<h2><a href="#" onclick="window.open('https://github.com/andrewrosss/dlnd_project_5'); return false;">Deep Convolutional GAN</a></h2>
 						<p>DESCRIPTION</p>
 						</ul>
 					</div>
@@ -193,7 +193,7 @@
 				<!-- PROJECT -->
 				<div class="row">
 					<div class="col-sm-12 col-md-6">
-						<h2>Language Translation</h2>
+						<h2><a href="#" onclick="window.open('https://github.com/andrewrosss/dlnd_project_4'); return false;">Language Translation</a></h2>
 						<p>DESCRIPTION</p>
 						</ul>
 					</div>
