add link to MAT344 in teaching.html

--- a/teaching.html
+++ b/teaching.html
@@ -102,7 +102,7 @@
 				<div class="row">
 					<!-- <h3 class='text-center'> Current Courses</h3> -->
 					<div class="col-md-6">
-						<h2>MAT344 - Introduction to Combinatorics</h2>
+						<h2><a href="#" onclick="window.open('https://mcs.utm.utoronto.ca/~rennetal/MAT344_F17.html'); return false;">MAT344 - Introduction to Combinatorics</a></h2>
 						<p>MAT344 covers basic counting principles, generating functions, permutations with restrictions, as well as  fundamentals of graph theory with algorithms; applications (including network flows). Combinatorial structures including block designs and finite geometries. </p>
 
 						<p>
