add nav bar to about.html, first <li> element is not working when screen width < 768px

--- a/about.html
+++ b/about.html
@@ -94,7 +94,18 @@
 			</div>
 		</div>
 		<div class="fh5co-section">
-			<div class="container">
+			<div class="container" style="padding: 0; margin: 0; width: auto;">
+				<div id="about-nav">
+					<ul><!-- 
+						 --><li><a href="index.html"><span>Home</span></a></li><!-- 
+						 --><li><a href="projects.html"><span>Projects</span></a></li><!-- 
+						 --><li><a href="teaching.html"><span>Teaching</span></a></li><!-- 
+						 --><li><a href="about.html"><span>About</span></a></li><!-- 
+						 --><li><a href="contact.html"><span>Contact</span></a></li>
+					</ul>
+				</div>
+			</div>
+			<div class="container" style="padding-top: 2em">
 				<div class="row">
 					<div class="col-md-5">
 						<h2>Our History</h2>
