fix spacing on home page

--- a/about.html
+++ b/about.html
@@ -93,7 +93,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="fh5co-section">
+		<div class="fh5co-section" style="padding-top: 0">
 			<div class="container" style="padding: 0; margin: 0; width: auto;">
 				<div id="about-nav">
 					<ul><!-- 
